[project]
name = "doexp"
version = "0.1.2"
description = "A simple experiment runner"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "K.R. Zentner", email = "krzentner@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Distributed Computing",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

# psutil should probably be at least 5.1.0
# If the user has an older version than that there's probably a good reason.
dependencies = [
  "psutil"
]

[project.optional-dependencies]
dev = []
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/krzentner/doexp"
"Bug Reports" = "https://github.com/krzentner/doexp/issues"
"Source" = "https://github.com/krzentner/doexp"

# Use setuptools to install the main script
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
doexp = "doexp:main"

# Below is poetry setup for developing this package
[tool.poetry.dependencies]
python = "^3.7,<3.11"
psutil = "^5.1.0"

[tool.pyright]
include = ["src"]
venv = ".venv"

[tool.poetry]
name = "doexp"
version = "0.1.2"
description = ""
authors = ["K.R. Zentner <krzentner@gmail.com>"]
